--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
             </li>
             <li class="work__item">
                 <div class="thumb">
-                    <picture > 
+                    <picture class="picture-team" > 
                         <source srcset="./images/desktop/we-doing/img-2-des.webp 1x, ./images/desktop/we-doing/img-2-des@2x.webp 2x "
                             media="(min-width: 1200px)" type="image/webp">
                         <source srcset="./images/desktop/we-doing/img-2-des.jpg 1x, ./images/desktop/we-doing/img-2-des@2x.jpg 2x "
                             media="(min-width: 1200px)" type="image/jpg">
                         <img class="thumb__image" src="./images/desktop/we-doing/img-2-des.jpg" alt="Чем мы занимаемся">
-                    </picture class="picture-team">
+                    </picture >
                     <div class="product">
                         <p class="product__name">Мобильные приложения</p>
                     </div>
