--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
         <h2 class="visually-hidden">Особенности</h2>
 <div class="container">
     <ul class="feature list">
-        <li class="feature__item ">
+        <li class="feature__item">
             <div class="feature__logo">
                 <svg class="feature__image" width="70" height="70">
                     <use href="./images/icons.svg#antenna"></use>
                 </svg>
             </div>
-            <h3 class="feature__title ">Внимание к деталям</h3>
+            <h3 class="feature__title">Внимание к деталям</h3>
             <p class="feature__text"> Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
         </li>
         <li class="feature__item">
@@ -153,12 +153,13 @@
                     <use href="./images/icons.svg#astronaut"></use>
                 </svg>
            </div>
-            <h3 class="feature__title ">Современные технологии</h3>
+            <h3 class="feature__title">Современные технологии</h3>
             <p class="feature__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
         </li>
     </ul>
 </div>
-    </section >-->
+    </section >
+
     <!--Whatwearedoing-->
     <section class="page-work">
     <div class="container">
@@ -605,9 +606,8 @@
                         <label class="modal-form__field" for="comment">Комментарий</label>
                         <textarea class="modal-form__message" name="comment" id="comment" placeholder="Введите текст"></textarea>
                         <input class="modal-form__term visually-hidden" type="checkbox" name="user-term" id="user-term">
-                        <label class="modal-form__check-desc" for="user-term">Соглашаюсь с рассылкой и принимаю&nbsp;
-                            <a class="policy-link" href="">Условия договора</a>
-                        </label>
+                        <label class="modal-form__check-desc" for="user-term"> <span>Соглашаюсь с рассылкой и принимаю&nbsp;
+                            <a class="policy-link" href="">Условия договора</a></span></label>
                        
                        
                         <button class="button form__button button--active" type="submit">Отправить</button>   
