--- a/portfolio.html
+++ b/portfolio.html
@@ -33,6 +33,7 @@
                     </li>
                 </ul>
             </nav>
+
             <button class="burger__btn"  type="button" data-menu-button>
                 <svg class="burger__icon" width="40" height="40" aria-label="мобильное меню">
                     <use href="./images/icons.svg#burger"></use>
@@ -61,10 +62,10 @@
                 </button>
                 <ul class="mobile-menu__list list">
                     <li class="mobile-menu__item">
-                        <a class="mobile-menu__link link mobile-menu__link--current" href="./index.html">Студия</a>
+                        <a class="mobile-menu__link link" href="./index.html">Студия</a>
                     </li>
                     <li class="mobile-menu__item">
-                        <a class="mobile-menu__link link" href="./portfolio.html">Портфолио</a>
+                        <a class="mobile-menu__link lin--current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="mobile-menu__item">
                         <a class="mobile-menu__link link" href="">Контакты</a>
