--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                         
                 </form>
         </div>
-    </div>-->
+    </div>
 
 <script src="./js/modal.js"></script>
 <script src="./js/mobile-menu.js"></script>
