--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                         <a class="mobile-menu__link link" href="./index.html">Студия</a>
                     </li>
                     <li class="mobile-menu__item">
-                        <a class="mobile-menu__link lin--current" href="./portfolio.html">Портфолио</a>
+                        <a class="mobile-menu__link link mobile-menu__link--current" href="./portfolio.html">Портфолио</a>
                     </li>
                     <li class="mobile-menu__item">
                         <a class="mobile-menu__link link" href="">Контакты</a>
